--- a/main.html
+++ b/main.html
@@ -8,6 +8,48 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" ></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
+	  <li data-target="#myCarousel" data-slide-to="3"></li>
+	  <li data-target="#myCarousel" data-slide-to="4"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner carousel slide" id="myCarousel">
+    <div class="first-slide item" >
+      <h1 class="text-center ">First Slide</h1>
+    </div>
+
+    <div class="second-slide item">
+      <h1 class="text-center ">second Slide</h1>
+    </div>
+
+    <div class="third-slide item active ">
+       <h1 class="text-center ">third Slide</h1>
+    </div>
+	   <div class="fourth-slide item">
+       <h1 class="text-center ">Fourth Slide</h1>
+    </div>
+	   <div class="fifth-slide item">
+       <h1 class="text-center ">Fifth Slide</h1>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 </body>
  
 </html>
